Fixed issues 5-7 in email: For screens with width <= 1280px, plugin width is smaller and search bar collapsed by default. Search bar open/collapsed status persists when user selects different target or moves through browser history. 'Whiteout' effect when saving an annotation covers whole page.
Other minor fixes and changes.

--- a/CHARMe_plugin/src/plugin/css/main.css
+++ b/CHARMe_plugin/src/plugin/css/main.css
@@ -197,10 +197,13 @@ body {
 .search-title .nav {
     width: 100%;
 }
-.search-open{
+.search-open {
     /*width: 360px;*/
     animation: search-slide-in 500ms;
     -webkit-animation: search-slide-in 500ms;
+}
+.search-opened {
+    /*width: 360px;*/
 }
 .search-button-holder{
     margin-right: 5px;
@@ -229,11 +232,16 @@ body {
     }
 }
 
-.search-collapsed{
+.search-collapse {
     /*width: 360px;*/
     margin-left: -505px;
     animation: search-slide-out 500ms;
     -webkit-animation: search-slide-out 500ms;
+    padding-left: 5px;
+}
+.search-collapsed {
+    /*width: 360px;*/
+    margin-left: -505px;
     padding-left: 5px;
 }
 
@@ -285,11 +293,11 @@ body {
     padding-right: 5px;
 }
 
-.search-results-open {
+.search-results-open, .search-results-opened {
     margin-left: 550px;
 }
 
-.search-results-collapsed {
+.search-results-collapse, .search-results-collapsed {
     margin-left: 50px;
 }
 
@@ -372,11 +380,11 @@ textarea::-webkit-input-placeholder {
     margin: 0;
 }
 
-.pagination_padding-open {
+.pagination_padding-open, .pagination_padding-opened {
     margin-left: 550px;
 }
 
-.pagination_padding-collapsed {
+.pagination_padding-collapse, .pagination_padding-collapsed {
     margin-left: 50px;
 }
 
